# try_sonarqube

./: .gitignore  CMakeLists.txt  README.md  sonar-project.properties
.github/workflows/: build.yml
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  math.cpp  math.hpp
src/common/tests/: CMakeLists.txt  test_math.cpp
